Fix alignment of nav_header

--- a/app/assets/stylesheets/birmingham.scss
+++ b/app/assets/stylesheets/birmingham.scss
@@ -53,6 +53,7 @@ div#main {
       text-align: center;
       float: left;
       width: 20%;
+      margin-left: 0.75em;
 
       svg {
         width: 10em;
